--- a/circuitos_resistivos.html
+++ b/circuitos_resistivos.html
@@ -132,6 +132,12 @@
                 <p>Los circuitos resistivos simples se utilizan en una amplia variedad de aplicaciones, desde dispositivos electrónicos básicos hasta complejos sistemas de control. Su simplicidad los hace ideales para la enseñanza y la práctica en electrónica.</p>
             </section>
 
-            
+            <!-- Aquí se agrega el PDF -->
+            <section class="text-center">
+                <h2>PDF de Apoyo</h2>
+                <embed src="images/Presentación3.pptx.pdf" type="application/pdf" width="100%" height="600px">
+            </section>
+        </main>
+    </div>
 </body>
 </html>
